# tensor4all-rs

./: AGENTS.md  Cargo.toml  README.md  julia_plan.md  run_python_tests.sh
.github/workflows/: CI.yml  CI_jl.yml  CI_julia.yml  CI_py.yml  CI_rollup.yml  CI_rs.yml
Tensor4all.jl/ext/: Tensor4allITensorsExt.jl
Tensor4all.jl/src/: C_API.jl  Tensor4all.jl
Tensor4all.jl/test/: runtests.jl
crates/quanticsgrids/: Cargo.toml
crates/tensor4all-core/: Cargo.toml
crates/tensor4all-core/src/: index.rs  index_ops.rs  lib.rs  tagset.rs
crates/tensor4all-core/tests/: basic.rs  index_ops.rs  index_tags.rs  permute.rs  tagset.rs
crates/tensor4all-index/src/: index_ops.rs
crates/tensor4all-index/tests/: basic.rs  index_ops.rs
crates/tensor4all-linalg/: Cargo.toml
crates/tensor4all-linalg/src/: lib.rs  qr.rs  svd.rs
crates/tensor4all-linalg/tests/: qr.rs  svd.rs
crates/tensor4all-tensor/: Cargo.toml
crates/tensor4all-tensor/src/: any_scalar.rs  lib.rs  storage.rs  tensor.rs
crates/tensor4all-tensor/tests/: any_scalar.rs  contraction.rs  diag.rs
crates/tensor4all-treetn/: Cargo.toml
crates/tensor4all-treetn/src/: treetn.rs
crates/tensor4all-treetn/tests/: basic.rs
tensor4all-capi/: Cargo.toml
tensor4all-capi/src/: lib.rs  types.rs
tensor4all-treetn/: Cargo.toml
tensor4all-treetn/src/: treetn.rs
tensor4all/core-tensor/: Cargo.toml
tensor4all/core-tensor/src/: tensor.rs
tensor4all/core-tensor/tests/: contraction.rs  diag.rs
