[package]
name = "quanticsgrids"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Quantics grid structures for efficient conversion between quantics, grid indices, and original coordinates"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "conversions"
harness = false
