[package]
name = "tensor4all-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
num-complex.workspace = true
rand.workspace = true

[dev-dependencies]
tensor4all-tensor = { path = "../tensor4all-tensor" }

