[package]
name = "tensor4all-linalg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["backend-faer"]
backend-faer = ["mdarray-linalg-faer"]
backend-lapack = ["mdarray-linalg-lapack"]

[dependencies]
tensor4all-tensor = { path = "../tensor4all-tensor" }
tensor4all-core = { path = "../tensor4all-core" }
mdarray.workspace = true
mdarray-linalg.workspace = true
mdarray-linalg-faer = { workspace = true, optional = true }
mdarray-linalg-lapack = { workspace = true, optional = true }
faer-traits.workspace = true
thiserror.workspace = true
num-complex.workspace = true
anyhow.workspace = true

[dev-dependencies]

