[package]
name = "tensor4all-tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tensor4all-core = { path = "../tensor4all-core" }
num-complex.workspace = true
num-traits.workspace = true
mdarray.workspace = true
mdarray-linalg.workspace = true
anyhow.workspace = true

[dev-dependencies]

